--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "react-loader-spinner": "^5.3.4",
     "react-slick": "^0.29.0",
     "react-vertical-timeline-component": "^3.6.0",
     "slick-carousel": "^1.8.1",
