change_loading and loadingpckg

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
-    "react-loader-spinner": "^5.3.4",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "react-vertical-timeline-component": "^3.6.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "6.0.0-rc.1",
